--- a/app.json
+++ b/app.json
@@ -1,5 +1,6 @@
 {
   "pages":[
+    "pages/homeh5/homeh5",
     "pages/home/home",
     "pages/owner/owner",
     "pages/mine/mine",
@@ -12,5 +13,4 @@
     "navigationBarTextStyle":"white",
     "backgroundColor": "#E60012"
   }
-
 }
